Solved svg not showing

--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -268,10 +268,10 @@ body {
 /* Do not edit modules/_sprite directly as it is generated automatically by Gulp.
 Instead edit gulp/templates/sprite */
 .icon {
-  background-image: url("/assets/images/sprites/sprite-ff4abae1.svg"); }
+  background-image: url("../images/sprites/sprite-ff4abae1.svg"); }
 
 .no-svg .icon {
-  background-image: url("/assets/images/sprites/sprite-ff4abae1.png"); }
+  background-image: url("../images/sprites/sprite-ff4abae1.png"); }
 
 .icon--clear-view-escapes {
   width: 146.4px;
